[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game_FoodEater/Scripts/FoodEaterUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/FREELAH.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/LCD14.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 77
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 60
outline_size = 3
outline_color = Color( 0.298039, 0.298039, 0.298039, 1 )
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 40.0
margin_top = 704.0
margin_right = 640.0
margin_bottom = 880.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 179.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 32.0

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 600.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Normal"
align = 1
valign = 1

[node name="ObstaclesLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 302.0
margin_right = 600.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Obstacles"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 600.0
margin_bottom = 118.0
custom_constants/separation = 30

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 2.0
margin_right = 230.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "Score"

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 260.0
margin_right = 440.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 4 )
text = "00000"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 600.0
margin_bottom = 179.0
custom_constants/separation = 36

[node name="HighscoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 2.0
margin_right = 225.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 5 )
text = "Highscore"

[node name="Highscore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 261.0
margin_right = 371.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 6 )
text = "00000"

[node name="ResetRequest" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 645.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 7 )
text = "Press R to restart"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}
